Table configuraciones {
    id int [pk, increment] // Primary key
    nombre varchar
    descripcion varchar
    direccion varchar
    telefono varchar
    divisa varchar
    correo_electronico varchar
    web varchar
    logo varchar
}

Table gestiones {
    id int [pk, increment] // Primary key
    nombre varchar
}

Table periodos {
    id int [pk, increment] // Primary key
    nombre varchar
    gestion_id int [ref: > gestiones.id]
}

Table niveles {
    id int [pk, increment] // Primary key
    nombre varchar
}

Table grados {
    id int [pk, increment] // Primary key
    nombre varchar
    nivel_id int [ref: > niveles.id]
}

Table paralelos {
    id int [pk, increment] // Primary key
    nombre varchar
    grado_id int [ref: > grados.id]
}

Table turnos {
    id int [pk, increment] // Primary key
    nombre varchar
}

Table materias {
    id int [pk, increment] // Primary key
    nombre varchar
}

Table users {
    id int [pk, increment] // Primary key
    name varchar
    email varchar
    password varchar
}

Table personals {
    id int [pk, increment] // Primary key
    usuario_id int [ref: > users.id]
    tipo varchar
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    direccion varchar
    telefono varchar
    profesion varchar
    foto varchar
}

Table formaciones {
    id int [pk, increment] // Primary key
    personal_id int [ref: > personals.id]
    titulo varchar
    institucion varchar
    nivel varchar
    ano_graduacion varchar
    archivo varchar
}

Table ppffs {
    id int [pk, increment] // Primary key
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    telefono varchar
    parentesco varchar
    ocupacion varchar
    direccion varchar
}

Table estudiantes {
    id int [pk, increment] // Primary key
    usuario_id int [ref: > users.id]
    ppff_id int [ref: > ppffs.id]
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    direccion varchar
    telefono varchar
    foto varchar
    estado varchar
}

Table matriculaciones {
    id int [pk, increment] // Primary key
    estudiante_id int [ref: > estudiantes.id]
    turno_id int [ref: > turnos.id]
    gestion_id int [ref: > gestiones.id]
    nivel_id int [ref: > niveles.id]
    grado_id int [ref: > grados.id]
    paralelo_id int [ref: > paralelos.id]
    fecha_matriculacion date
}

Table asignaciones {
    id int [pk, increment] // Primary key
    personal_id int [ref: > personals.id]
    turno_id int [ref: > turnos.id]
    gestion_id int [ref: > gestiones.id]
    nivel_id int [ref: > niveles.id]
    grado_id int [ref: > grados.id]
    paralelo_id int [ref: > paralelos.id]
    materia_id int [ref: > materias.id]
    estado varchar
    fecha_asignacion date
}

Table pagos {
    id int [pk, increment] // Primary key
    matriculacion_id int [ref: > matriculaciones.id]
    monto decimal(10,2)
    metodo_pago varchar
    descripcion varchar
    fecha_pago date
    estado varchar
}

Table asistencias {
    id int [pk, increment] // Primary key
    asignacion_id int [ref: > asignaciones.id]
    fecha date
    observacion char
}

Table detalles_asistencias {
    id int [pk, increment] // Primary key
    asistencia_id int [ref: > asistencias.id]
    estudiante_id int [ref: > estudiantes.id]
    estado_asistencia varchar
}